; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_backtracing.c_recurse_b.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_backtracing.c_recurse_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @recurse_b to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recurse_b(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 1
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = call i32 (...) @expect_stack()
  %8 = call i32 (...) @getpid()
  store i32 0, i32* %2, align 4
  br label %14

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = sub i32 %10, 1
  %12 = call i32 @recurse_a(i32 %11)
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %9, %6
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @expect_stack(...) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @recurse_a(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
